# vibeterm

./: .gitignore  CHANGELOG.md  Cargo.toml  PREFERENCES_GUIDE.md  QA_CHECKLIST.txt  QA_INDEX.md  QA_SHORTCUTS.md  QA_SUMMARY.md  QA_TESTING_GUIDE.md  QA_TEST_REPORT.md  QUICK_REFERENCE.md  README.ko.md  README.md  SHORTCUTS.md  TOKIO_RUNTIME_FIX.md  run_qa_tests.sh  verify_fix.sh  vibeterm_specification.md
qa_logs/test_files/: sample.txt
src/: app.rs  config.rs  directory_scanner.rs  layout.rs  main.rs  menu.rs  project.rs  pty_tracker.rs  theme.rs
src/context/: events.rs  git.rs  manager.rs  mod.rs  pinned.rs
src/ui/: command_palette.rs  mod.rs  preferences.rs  sidebar.rs  status_bar.rs  tab_bar.rs
src/watcher/: mod.rs  service.rs
